# slog

./: .clang-format  CMakeLists.txt  LICENSE  README.md  slog_demo.cpp
inc/: slog.hpp
tests/: CMakeLists.txt  mock_slog.hpp  test_cpp11.cpp
